--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,7 +41,6 @@
 
                 android:text="Construction Project Management"
                 android:textColor="@android:color/background_light"
-                android:fontFamily="sans-serif"
                 android:textSize="14sp"
                 />
 
@@ -50,16 +49,54 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/signUpSubHeader"
+                android:layout_marginTop="90dp"
+
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+                android:hint="Email"
                 >
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/email_editText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_email"
+                    />
 
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_inputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/email_inputLayout"
+                android:layout_marginTop="10dp"
+
+
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+                android:hint="Password"
+                >
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/password_editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/email_editText"
+                    android:drawableLeft="@drawable/ic_password_solid"
+
+                    />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.button.MaterialButton
+                android:id="@+id/signInButton"
+                android:layout_below="@id/password_inputLayout"
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:text="Sign In"
+
+                style="@style/Widget.MaterialComponents.Button"
+                />
 
 
 
