--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +11,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -25,11 +25,13 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
 
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="80dp"
 
-                android:text="Sign In"
+                android:text="@string/sign_in_heading"
                 android:textColor="@android:color/background_light"
-                android:textSize="72sp" />
+                android:textSize="72sp"
+
+                />
 
             <TextView
                 android:id="@+id/signUpSubHeader"
@@ -39,9 +41,10 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="-3dp"
 
-                android:text="Construction Project Management"
+                android:text="@string/construction_project_management_SubHeading"
                 android:textColor="@android:color/background_light"
                 android:textSize="14sp"
+
                 />
 
             <android.support.design.widget.TextInputLayout
@@ -51,8 +54,8 @@
                 android:layout_below="@id/signUpSubHeader"
                 android:layout_marginTop="90dp"
 
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-                android:hint="Email"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:hint="@string/email_textBox_Placeholder"
                 >
 
                 <android.support.design.widget.TextInputEditText
@@ -60,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_email"
-                    />
+                    tools:ignore="RtlHardcoded" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -72,8 +75,8 @@
                 android:layout_marginTop="10dp"
 
 
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-                android:hint="Password"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:hint="@string/password_textBox_Placeholder"
                 >
 
                 <android.support.design.widget.TextInputEditText
@@ -82,19 +85,58 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/email_editText"
                     android:drawableLeft="@drawable/ic_password_solid"
-
-                    />
+                    tools:ignore="RtlHardcoded" />
 
             </android.support.design.widget.TextInputLayout>
 
+
+            <TextView
+                android:id="@+id/forgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/password_inputLayout"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+
+                android:text="@string/forgot_password_signIn_form"
+                android:textColor="#e0e0e0"
+                android:textSize="18sp"
+
+                android:shadowRadius="30"
+                android:padding="5dp"
+                android:shadowDy="12"
+                android:shadowDx="12"
+                android:shadowColor="#000"
+            />
+
+            <TextView
+                android:id="@+id/dontHaveAccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/forgotPassword"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:text="@string/don_t_have_an_account_sign_up"
+                android:textColor="#e0e0e0"
+                android:textSize="18sp"
+
+                android:shadowRadius="30"
+                android:padding="5dp"
+                android:shadowDy="12"
+                android:shadowDx="12"
+                android:shadowColor="#000"
+                />
+
+
+
             <android.support.design.button.MaterialButton
                 android:id="@+id/signInButton"
-                android:layout_below="@id/password_inputLayout"
-                android:layout_alignParentRight="true"
+                android:layout_below="@id/dontHaveAccount"
                 android:layout_height="wrap_content"
-                android:layout_width="100dp"
-                android:text="Sign In"
-
+                android:layout_width="90dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:text="@string/sign_in_btn_value"
                 style="@style/Widget.MaterialComponents.Button"
                 />
 
