--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_sign_up_in"
-    tools:context=".loginFragment"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    >
+    tools:context=".loginFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,46 +16,38 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <!--Shadow effect, Referred
-            https://stackoverflow.com/questions/3297437/shadow-effect-for-a-text-in-android-->
+
             <TextView
                 android:id="@+id/signUpHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-
                 android:layout_marginTop="80dp"
-
                 android:text="@string/sign_in_heading"
                 android:textColor="@android:color/background_light"
                 android:textSize="72sp"
-
                 />
 
             <TextView
                 android:id="@+id/signUpSubHeader"
-                android:layout_below="@id/signUpHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/signUpHeader"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="-3dp"
-
                 android:text="@string/construction_project_management_SubHeading"
                 android:textColor="@android:color/background_light"
                 android:textSize="14sp"
-
                 />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/email_inputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/signUpSubHeader"
                 android:layout_marginTop="90dp"
-
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:hint="@string/email_textBox_Placeholder"
-                >
+                android:hint="@string/email_textBox_Placeholder">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/email_editText"
@@ -64,20 +55,16 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_email"
                     tools:ignore="RtlHardcoded" />
-
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/password_inputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email_inputLayout"
                 android:layout_marginTop="10dp"
-
-
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:hint="@string/password_textBox_Placeholder"
-                >
+                android:hint="@string/password_textBox_Placeholder">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/password_editText"
@@ -89,7 +76,6 @@
 
             </android.support.design.widget.TextInputLayout>
 
-
             <TextView
                 android:id="@+id/forgotPassword"
                 android:layout_width="wrap_content"
@@ -98,16 +84,15 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
 
+                android:padding="5dp"
+                android:shadowColor="#000"
+                android:shadowDx="12"
+
+                android:shadowDy="12"
+                android:shadowRadius="30"
                 android:text="@string/forgot_password_signIn_form"
                 android:textColor="#e0e0e0"
-                android:textSize="18sp"
-
-                android:shadowRadius="30"
-                android:padding="5dp"
-                android:shadowDy="12"
-                android:shadowDx="12"
-                android:shadowColor="#000"
-            />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/dontHaveAccount"
@@ -116,37 +101,28 @@
                 android:layout_below="@id/forgotPassword"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
+                android:padding="5dp"
+                android:shadowColor="#000"
+                android:shadowDx="12"
+
+                android:shadowDy="12"
+                android:shadowRadius="30"
                 android:text="@string/don_t_have_an_account_sign_up"
                 android:textColor="#e0e0e0"
-                android:textSize="18sp"
-
-                android:shadowRadius="30"
-                android:padding="5dp"
-                android:shadowDy="12"
-                android:shadowDx="12"
-                android:shadowColor="#000"
-                />
-
-
+                android:textSize="18sp" />
 
             <android.support.design.button.MaterialButton
                 android:id="@+id/signInButton"
-                android:layout_below="@id/dontHaveAccount"
-                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/dontHaveAccount"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
-                android:text="@string/sign_in_btn_value"
-                style="@style/Widget.MaterialComponents.Button"
-                />
-
-
+                android:text="@string/sign_in_btn_value" />
 
         </RelativeLayout>
 
-
-
     </ScrollView>
-
 
 </FrameLayout>
