--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-  <color name="primaryColor">#c2185c</color>
-  <color name="primaryLightColor">#fa5789</color>
-  <color name="primaryDarkColor">#8c0033</color>
-  <color name="secondaryColor">#6a1b9a</color>
-  <color name="secondaryLightColor">#9c4dcc</color>
-  <color name="secondaryDarkColor">#38006b</color>
+  <color name="primaryColor">#b71c1c</color>
+  <color name="primaryLightColor">#f05545</color>
+  <color name="primaryDarkColor">#7f0000</color>
+  <color name="secondaryColor">#4a148c</color>
+  <color name="secondaryLightColor">#7c43bd</color>
+  <color name="secondaryDarkColor">#12005e</color>
   <color name="primaryTextColor">#ffffff</color>
   <color name="secondaryTextColor">#ffffff</color>
+  <color name="backgroundLight">#F5F5F6</color>
+  <color name="backgroundDark">#e1e2e1</color>
 </resources>
