--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_sign_up_in"
+    android:background="@drawable/background_1"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     tools:context=".userManagement.signupFragment">
@@ -155,7 +155,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/password_inputLayout"
                 android:layout_marginTop="10dp"
-                android:hint="@string/confirm_password">
+                android:hint="@string/confirm_password"
+
+                >
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/confPassword_editText"
@@ -163,7 +165,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/email_editText"
                     android:drawableLeft="@drawable/ic_password_solid"
-                    tools:ignore="RtlHardcoded" />
+                    tools:ignore="RtlHardcoded"
+
+                    />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -176,6 +180,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
                 android:text="@string/continue1" />
+
 
         </RelativeLayout>
 
