--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -4,17 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@drawable/background_1"
-
-    tools:context=".userManagement.loginFragment">
+    tools:context=".userManagement.forgotPasswordResetFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
         tools:ignore="UselessParent">
-
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,29 +20,28 @@
             android:paddingRight="16dp">
 
             <TextView
-                android:id="@+id/signInHeader"
+                android:id="@+id/forgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="80dp"
-
                 android:padding="5dp"
                 android:shadowColor="#000"
                 android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="30"
 
-                android:text="@string/sign_in_heading"
+                android:shadowDy="5"
+                android:shadowRadius="15"
+                android:text="@string/forgot_password"
                 android:textColor="@color/primaryTextColor"
-                android:textSize="72sp" />
+                android:textSize="46sp" />
 
             <TextView
-                android:id="@+id/signInSubHeader"
+                android:id="@+id/resetYourPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/signInHeader"
+                android:layout_below="@id/forgotPassword"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="-3dp"
+                android:layout_marginBottom="10dp"
 
                 android:padding="5dp"
                 android:shadowColor="#000"
@@ -53,40 +49,45 @@
                 android:shadowDy="5"
                 android:shadowRadius="30"
 
-                android:text="@string/construction_project_management_SubHeading"
+                android:text="@string/fill_the_form_to_reset_your_password"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="14sp" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/email_inputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/signInSubHeader"
-                android:layout_marginTop="90dp"
-                android:hint="@string/email_textBox_Placeholder"
-
-                >
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/email_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_email"
-                    tools:ignore="RtlHardcoded" />
-            </android.support.design.widget.TextInputLayout>
-
+            <!--Password Entry-->
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/password_inputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/email_inputLayout"
-                android:hint="@string/password_textBox_Placeholder"
+                android:layout_below="@id/resetYourPassword"
+                android:layout_marginTop="120dp"
+                android:hint="@string/new_password"
                 app:passwordToggleEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/password_editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/email_editText"
+                    android:drawableLeft="@drawable/ic_password_solid"
+                    android:inputType="textPassword"
+                    tools:ignore="RtlHardcoded" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <!--Confirm Password Entry-->
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/confPassword_inputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/password_inputLayout"
+                android:hint="@string/confirm_new_password"
+                app:passwordToggleEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/confPassword_editText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/email_editText"
@@ -98,54 +99,21 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <TextView
-                android:id="@+id/forgotPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/password_inputLayout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
 
-                android:padding="5dp"
-                android:shadowColor="#000"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="30"
-
-                android:text="@string/forgot_password_signIn_form"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/dontHaveAccount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/forgotPassword"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-
-                android:padding="5dp"
-                android:shadowColor="#000"
-                android:shadowDx="5"
-                android:shadowDy="5"
-                android:shadowRadius="30"
-
-                android:text="@string/don_t_have_an_account_sign_up"
-                android:textColor="@color/primaryTextColor"
-                android:textSize="16sp" />
 
             <android.support.design.button.MaterialButton
-                android:id="@+id/signInButton"
+                android:id="@+id/changePasswordBtn"
                 style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="95dp"
+                android:layout_width="190dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/dontHaveAccount"
+                android:layout_below="@id/confPassword_inputLayout"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:text="@string/sign_in_btn_value"
+                android:text="@string/change_password"
                 app:rippleColor="@color/primaryColor" />
 
         </RelativeLayout>
+
 
     </ScrollView>
 
