--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_1"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
     tools:context=".userManagement.signupFragment">
 
     <ScrollView
@@ -17,7 +16,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
             <TextView
                 android:id="@+id/signUpHeader"
@@ -77,7 +78,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/fname_inputLayout"
-                android:layout_marginTop="5dp"
                 android:hint="@string/last_name">
 
                 <android.support.design.widget.TextInputEditText
@@ -95,8 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lname_inputLayout"
-                android:layout_marginTop="5dp"
-                android:hint="@string/last_name">
+                android:hint="@string/mobile_number">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/mobile_editText"
@@ -113,8 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/mobile_inputLayout"
-                android:layout_marginTop="10dp"
-                android:hint="@string/password_textBox_Placeholder">
+                android:hint="@string/email_address">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/email_editText"
@@ -133,8 +131,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email_inputLayout"
-                android:layout_marginTop="10dp"
-                android:hint="@string/password_textBox_Placeholder">
+                android:hint="@string/password_textBox_Placeholder"
+                app:passwordToggleEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/password_editText"
@@ -142,6 +140,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/email_editText"
                     android:drawableLeft="@drawable/ic_password_solid"
+                    android:inputType="textPassword"
                     tools:ignore="RtlHardcoded" />
 
             </android.support.design.widget.TextInputLayout>
@@ -154,10 +153,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/password_inputLayout"
-                android:layout_marginTop="10dp"
                 android:hint="@string/confirm_password"
-
-                >
+                app:passwordToggleEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/confPassword_editText"
@@ -165,6 +162,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/email_editText"
                     android:drawableLeft="@drawable/ic_password_solid"
+                    android:inputType="textPassword"
                     tools:ignore="RtlHardcoded"
 
                     />
@@ -172,14 +170,16 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.button.MaterialButton
-                android:id="@+id/signInButton"
+                android:id="@+id/ContinueBtn"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="115dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/confPassword_inputLayout"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:text="@string/continue1" />
+                android:text="@string/continue1"
+                app:rippleColor="@color/primaryColor"
+                />
 
 
         </RelativeLayout>
