#1 Package Renamed.  -GSR

--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -103,12 +103,12 @@
             <android.support.design.button.MaterialButton
                 android:id="@+id/changePasswordBtn"
                 style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="190dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/confPassword_inputLayout"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
-                android:text="@string/change_password"
+                android:text="@string/change"
                 app:rippleColor="@color/primaryColor" />
 
         </RelativeLayout>
