--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -78,7 +78,7 @@
             <android.support.design.button.MaterialButton
                 android:id="@+id/ContinueBtn"
                 style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="115dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email_inputLayout"
                 android:layout_centerHorizontal="true"
