--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -137,7 +137,7 @@
             <android.support.design.button.MaterialButton
                 android:id="@+id/signInButton"
                 style="@style/Widget.MaterialComponents.Button"
-                android:layout_width="95dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/dontHaveAccount"
                 android:layout_centerHorizontal="true"
