--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_1"
+    android:background="@drawable/material_dark"
     tools:context=".userManagement.forgotPasswordResetFragment">
 
     <ScrollView
@@ -17,14 +17,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:paddingRight="16dp"
+            android:paddingTop="@dimen/um_top_spacing"
+            >
 
             <TextView
                 android:id="@+id/forgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="80dp"
+
                 android:padding="5dp"
                 android:shadowColor="#000"
                 android:shadowDx="5"
