#1 UI improvements, usermanagement screens.  -GSR

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,25 +7,21 @@
     android:background="@drawable/material_dark"
     tools:context=".userManagement.forgotPasswordFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        tools:ignore="UselessParent">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingLeft="@dimen/um_side_spacing"
+            android:paddingRight="@dimen/um_side_spacing"
             android:paddingTop="@dimen/um_top_spacing"
+            android:paddingBottom="@dimen/um_bottom_spacing"
             >
 
             <TextView
                 android:id="@+id/forgotPassword"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
+
+                android:gravity="center_horizontal"
                 android:padding="5dp"
                 android:shadowColor="#000"
                 android:shadowDx="5"
@@ -34,7 +30,11 @@
                 android:shadowRadius="15"
                 android:text="@string/forgot_password"
                 android:textColor="@color/primaryTextColor"
-                android:textSize="42sp" />
+
+                android:textSize="42sp"
+
+
+                />
 
             <TextView
                 android:id="@+id/resetYourPassword"
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/resetYourPassword"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="100dp"
                 android:hint="@string/email_address"
                 app:errorEnabled="true"
                 app:helperText="Email Address Associated With Your Account"
@@ -89,7 +89,4 @@
 
         </RelativeLayout>
 
-
-    </ScrollView>
-
-</FrameLayout>
+</ScrollView>
