--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,25 +7,20 @@
     android:background="@drawable/material_dark"
     tools:context=".userManagement.forgotPasswordResetFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        tools:ignore="UselessParent">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingLeft="@dimen/um_side_spacing"
+            android:paddingRight="@dimen/um_side_spacing"
             android:paddingTop="@dimen/um_top_spacing"
+            android:paddingBottom="@dimen/um_bottom_spacing"
             >
 
             <TextView
                 android:id="@+id/forgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
+                android:gravity="center_horizontal"
 
                 android:padding="5dp"
                 android:shadowColor="#000"
@@ -61,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/resetYourPassword"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="100dp"
                 android:hint="@string/new_password"
                 app:passwordToggleEnabled="true">
 
@@ -116,6 +111,4 @@
         </RelativeLayout>
 
 
-    </ScrollView>
-
-</FrameLayout>
+</ScrollView>
