--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -11,9 +11,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingLeft="@dimen/um_side_spacing"
+            android:paddingRight="@dimen/um_side_spacing"
             android:paddingTop="@dimen/um_top_spacing"
+            android:paddingBottom="@dimen/um_bottom_spacing"
             >
 
             <TextView
