--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="um_top_spacing">60dp</dimen>
+    <dimen name="um_bottom_spacing">20dp</dimen>
+    <dimen name="um_side_spacing">16dp</dimen>
 </resources>
