#1 UI improvements, usermanagement screens.  -GSR

--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -21,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
 
                 android:padding="5dp"
                 android:shadowColor="#000"
