--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content"
 
                 android:gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
                 android:padding="5dp"
                 android:shadowColor="#000"
                 android:shadowDx="5"
