#1 UI improvements, usermanagement screens.  -GSR

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -23,8 +23,8 @@
 
                 android:gravity="center_horizontal"
                 android:layout_centerHorizontal="true"
-                android:padding="5dp"
-                android:shadowColor="#000"
+                android:padding="@dimen/um_padding_shadow"
+                android:shadowColor="@color/um_shadow_color"
                 android:shadowDx="5"
 
                 android:shadowDy="5"
@@ -32,7 +32,7 @@
                 android:text="@string/forgot_password"
                 android:textColor="@color/primaryTextColor"
 
-                android:textSize="42sp"
+                android:textSize="@dimen/um_fp_heading_text_size"
 
 
                 />
@@ -43,16 +43,16 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/forgotPassword"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
 
-                android:shadowColor="#000"
+
+                android:shadowColor="@color/um_shadow_color"
                 android:shadowDx="5"
                 android:shadowDy="5"
                 android:shadowRadius="24"
 
                 android:text="@string/fill_the_form_to_reset_your_password"
                 android:textColor="@color/primaryTextColor"
-                android:textSize="14sp" />
+                android:textSize="@dimen/um_subheading_text_size" />
 
             <!--Email Entry-->
             <android.support.design.widget.TextInputLayout
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/resetYourPassword"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="@dimen/um_fp_form_heading_spacing"
                 android:hint="@string/email_address"
                 app:errorEnabled="true"
                 app:helperText="Email Address Associated With Your Account"
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email_inputLayout"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="@dimen/um_btn_top_spacing"
                 android:text="@string/continue1"
                 app:rippleColor="@color/primaryColor" />
 
